--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "megatienda"
+    }
+  },
+  "defaultProject": "megatienda",
+  "cli": {
+    "analytics": "ea984877-438a-4995-9598-f3231b3dd498"
+  }
 }
