--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-order-pipe": "^2.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
